# bda

./: .gitignore  IMPROVEMENTS_V2.md  README.md  SETUP.md  pyproject.toml  requirements.txt
notebooks/: 02P_Python basics 1.ipynb  03P_Python basics 2.ipynb  04P_DataFrame.ipynb  hello.ipynb
outputs/: 2025_predictions.csv  2025_predictions_detailed.csv  best_hyperparameters_v2.csv  best_model_AdaBoost.pkl  feature_importance.csv  model_performance_comparison.csv  model_performance_comparison_v2.csv  model_performance_summary.csv  predictions_2025.csv
scripts/: df_refined.csv  hello.py  improved_model_comparison.py  improved_model_comparison_v2.py  test.py  train_model.py  visualize_results.py
