[project]
name = "bda"
version = "0.1.0"
description = "BDA project managed by uv"
authors = [ { name = "ming" } ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
notebook = [
  "jupyterlab>=4",
  "ipykernel",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]

[tool.bda]
default_packages = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
